Ajustes de Layout

--- a/data/hoverboard.config.json
+++ b/data/hoverboard.config.json
@@ -11,7 +11,7 @@
     "twitter": "gdggoiania"
   },
   "webapp": {
-    "shortName": "DevFest",
+    "shortName": "DevFest Cerrado",
     "themeColor": "#4caf50",
     "backgroundColor": "#4caf50"
   },
